infrastructure/clusters/edge1/raw/httproutes/code-server.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/part-of: kube-world
spec:
  parentRefs:
    - name: kube-world-gateway
      namespace: kube-system
  hostnames:
    - "code.edge1.kubew.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: code-server
          port: 8443
