infrastructure/clusters/edge1/raw/httproutes/esphome.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/part-of: kube-world
spec:
  parentRefs:
    - name: kube-world-gateway
      namespace: kube-system
  hostnames:
    - "esphome.edge1.kubew.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: esphome
          port: 6052
