infrastructure/clusters/edge1/raw/httproutes/influxdb.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/part-of: kube-world
spec:
  parentRefs:
    - name: kube-world-gateway
      namespace: kube-system
  hostnames:
    - "influxdb.edge1.kubew.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: influxdb
          port: 8086
