infrastructure/clusters/edge1/raw/httproutes/nodered.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nodered
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: nodered
    app.kubernetes.io/part-of: kube-world
spec:
  parentRefs:
    - name: kube-world-gateway
      namespace: kube-system
  hostnames:
    - "nodered.edge1.kubew.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nodered
          port: 1880
