infrastructure/clusters/edge1/raw/httproutes/zigbee2mqtt.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/part-of: kube-world
spec:
  parentRefs:
    - name: kube-world-gateway
      namespace: kube-system
  hostnames:
    - "zigbee.edge1.kubew.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee2mqtt
          port: 8080
